--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Angular Course</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css">
+    <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
   </head>
   <body layout="column">
     <div class="">
@@ -22,9 +22,9 @@
     <h1>Hola {{'Angular'}}</h1>
 
     <script src="bower_components/angular/angular.js"></script>
-    <script src="/bower_components/angular-aria/angular-aria.js"></script>
-	  <script src="/bower_components/angular-animate/angular-animate.js"></script>
-	  <script src="/bower_components/angular-material/angular-material.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="bower_components/angular-aria/angular-aria.js"></script>
+	  <script src="bower_components/angular-animate/angular-animate.js"></script>
+	  <script src="bower_components/angular-material/angular-material.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
